// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RatingStars snapshots rating 2 1`] = `
<scale-rating-stars max-value="5" min-value="0" star-size="large" value="2">
  <mock:shadow-root>
    <input aria-orientation="horizontal" aria-valuemax="5" aria-valuemin="0" aria-valuenow="2" aria-valuetext="2 out of 5 stars" id="scale-rating-star-1" max="5" min="0" part="range-slider" step="1" type="range" value="2">
    <div part="wrapper">
      <div data-selected data-value="1" part="star">
        <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
        <div class="icon-clip">
          <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
        </div>
      </div>
      <div data-selected data-value="2" part="star">
        <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
        <div class="icon-clip">
          <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
        </div>
      </div>
      <div data-value="3" part="star">
        <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
        <div class="icon-clip">
          <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
        </div>
      </div>
      <div data-value="4" part="star">
        <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
        <div class="icon-clip">
          <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
        </div>
      </div>
      <div data-value="5" part="star">
        <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
        <div class="icon-clip">
          <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</scale-rating-stars>
`;

exports[`RatingStars snapshots rating 2, maxValue 7 1`] = `
<scale-rating-stars max-value="7" min-value="0" star-size="large" value="2">
  <mock:shadow-root>
    <input aria-orientation="horizontal" aria-valuemax="7" aria-valuemin="0" aria-valuenow="2" aria-valuetext="2 out of 7 stars" id="scale-rating-star-3" max="7" min="0" part="range-slider" step="1" type="range" value="2">
    <div part="wrapper">
      <div data-selected data-value="1" part="star">
        <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
        <div class="icon-clip">
          <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
        </div>
      </div>
      <div data-selected data-value="2" part="star">
        <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
        <div class="icon-clip">
          <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
        </div>
      </div>
      <div data-value="3" part="star">
        <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
        <div class="icon-clip">
          <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
        </div>
      </div>
      <div data-value="4" part="star">
        <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
        <div class="icon-clip">
          <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
        </div>
      </div>
      <div data-value="5" part="star">
        <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
        <div class="icon-clip">
          <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
        </div>
      </div>
      <div data-value="6" part="star">
        <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
        <div class="icon-clip">
          <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
        </div>
      </div>
      <div data-value="7" part="star">
        <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
        <div class="icon-clip">
          <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</scale-rating-stars>
`;

exports[`RatingStars snapshots rating 3, minValue 1 1`] = `
<scale-rating-stars max-value="5" min-value="0" minvalue="1" star-size="large" value="3">
  <mock:shadow-root>
    <input aria-orientation="horizontal" aria-valuemax="5" aria-valuemin="0" aria-valuenow="3" aria-valuetext="3 out of 5 stars" id="scale-rating-star-2" max="5" min="0" part="range-slider" step="1" type="range" value="3">
    <div part="wrapper">
      <div data-selected data-value="1" part="star">
        <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
        <div class="icon-clip">
          <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
        </div>
      </div>
      <div data-selected data-value="2" part="star">
        <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
        <div class="icon-clip">
          <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
        </div>
      </div>
      <div data-selected data-value="3" part="star">
        <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
        <div class="icon-clip">
          <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
        </div>
      </div>
      <div data-value="4" part="star">
        <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
        <div class="icon-clip">
          <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
        </div>
      </div>
      <div data-value="5" part="star">
        <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
        <div class="icon-clip">
          <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</scale-rating-stars>
`;

exports[`RatingStars snapshots rating 4, disabled 1`] = `
<scale-rating-stars disabled="" max-value="5" min-value="0" star-size="large" value="3">
  <mock:shadow-root>
    <input aria-orientation="horizontal" aria-valuemax="5" aria-valuemin="0" aria-valuenow="3" aria-valuetext="3 out of 5 stars" disabled="" id="scale-rating-star-4" max="5" min="0" part="range-slider" step="1" type="range" value="3">
    <div part="wrapper">
      <div data-selected data-value="1" part="star">
        <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
        <div class="icon-clip">
          <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
        </div>
      </div>
      <div data-selected data-value="2" part="star">
        <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
        <div class="icon-clip">
          <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
        </div>
      </div>
      <div data-selected data-value="3" part="star">
        <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
        <div class="icon-clip">
          <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
        </div>
      </div>
      <div data-value="4" part="star">
        <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
        <div class="icon-clip">
          <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
        </div>
      </div>
      <div data-value="5" part="star">
        <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
        <div class="icon-clip">
          <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</scale-rating-stars>
`;
